--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
     </div>
     <h1>About Me</h1>
     <div id="aboutMe">
-        <img id="aboutPic" src="https://github.com/TimmyLuong11/homework-8-TimmyLuong11/blob/main/me.jpg?raw=true" />
+        <img id="aboutPic" src="https://github.com/TimmyLuong11/PersonalWebsite/blob/master/photo.jpeg?raw=true"/>
         <p id="aboutPara">
             My colleague and coworkers have described me as dependable, trustworthy, honest, and hard-working.
             I have experience in customer service through positions at The University of Oklahoma and Tulsa Community College.
-            I will be graduating in December 2021, and I plan to pursue a career working with databases or be a software developer.
+            I graduated in December 2021, and I plan to pursue a career working with databases or be a software developer.
             I will seek a position that aligns with my value and help a company improve its database or develop code to assist the company.
-            As I continue with my degree, I will seek new skills and form a well-rounded professional network.
+            As I continue with my career path, I will seek new skills and form a well-rounded professional network.
             Please feel free to connect with me or inform me of any potential opportunities.
         </p>
     </div>
